<resources>
    <string name="app_name">CLEO Editor</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="code_errors">Code and Errors</string>
    <string name="code_info">Code</string>
    <string name="errors">Errors</string>
    <string name="no_errors">No Errors</string>
    <string name="no_cleo_format">CLEO Format undefined</string>
    <string name="unknown_opcode_error">Unknown Opcode "%1$s"</string>
    <string name="code_line">Line %1$d: %2$s %3$s</string>
    <string name="address_already_defined">label already defined</string>
    <string name="no_inverted_opcode">invalid negative keyword, no inverted opcode</string>
    <string name="invalid_if_condition">invalid if argument, 1 ... 7 AND operator, 21 ... 27 OR operator, please specify the number of conditions.</string>
    <string name="modifier_unknown">invalid definition "%1$s"</string>
    <string name="address_unknown">label unknown "%1$s"</string>
    <string name="no_available_information">Information not available when selecting multiple lines.</string>
    <string name="inverted_opcode">Inverted</string>
    <string name="constant_unknown">Constant unknown "%1$s"</string>
    <string name="open_a_file">Please, open a file first</string>
    <string name="result">Result</string>
    <string name="accept">Accept</string>
    <string name="save_changes">Save changes?</string>
    <string name="save_changes_content">Do you want to save changes?</string>
    <string name="save">Save</string>
    <string name="no_save">No save</string>
    <string name="cancel">Cancel</string>
    <string name="no_cleo_file">Must be a cleo script file</string>
    <string name="no_txt_file">Must be a text file</string>
    <string name="invalid_logical">Invalid logical operator</string>
    <string name="missing_parameters">Missing parameters, expected %1$d but found %2$d</string>
    <string name="too_much_parameters">Too much parameters, expected %1$d but found %2$d</string>
    <string name="opcode_example">Example: %1$s: %2$s</string>
    <string name="new_file">New</string>
    <string name="open_file">Open</string>
    <string name="save_file">Save</string>
    <string name="search_opcode">Search opcode</string>
    <string name="compile">Compile</string>
    <string name="decompile">Decompile</string>
    <string name="files">Files</string>
    <string name="no_available_info">Information not available when multiple lines are selecting</string>
    <string name="new_file_name">File name</string>
    <string name="create_new_file">Create new file</string>
    <string name="create">Create</string>
    <string name="opcode_info">%1$s\n%2$s</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="found_param">Found:\nType: %1$s\nSource: %2$s</string>
    <string name="expected_param">Expected:\nType: %1$s\nSource: %2$s</string>
    <string name="undefined">Undefined</string>
    <string name="global_var">Global variable</string>
    <string name="local_var">Local variable</string>
    <string name="any_var">Any variable</string>
    <string name="parameters">Parameters</string>
    <string name="too_many_errors">Too many errors, found %1$d</string>
    <string name="copy_template">Copy template</string>
    <string name="example">Example</string>
    <string name="no_example_available">No example available</string>
    <string name="copied_correctly">Copied correctly</string>
    <string name="link_know_more">GTA Modding Documentation</string>
</resources>
