<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/code_errors"
        android:icon="@drawable/ic_code"
        android:title="@string/code_errors"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo"
        android:orderInCategory="2"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/redo"
        android:orderInCategory="3"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>